[gd_scene load_steps=5 format=3 uid="uid://ci1fijeeij86m"]

[ext_resource type="Texture2D" uid="uid://dry4v5vpmc2fg" path="res://minigames/pesca/juegopesca.png" id="1_5ayr7"]
[ext_resource type="Script" uid="uid://coguw61jfb00x" path="res://minigames/pesca/juegopesca.gd" id="1_tgi3h"]
[ext_resource type="PackedScene" uid="uid://cbuw7ala81bnn" path="res://minigames/pesca/fisihing_game.tscn" id="5_l86mm"]

[sub_resource type="LabelSettings" id="LabelSettings_b6sy1"]
font_size = 70

[node name="FishingSystem" type="Node2D"]
script = ExtResource("1_tgi3h")

[node name="TextureRect" type="TextureRect" parent="."]
offset_right = 1920.0
offset_bottom = 1080.0
texture = ExtResource("1_5ayr7")

[node name="fishing_game" parent="." instance=ExtResource("5_l86mm")]
visible = false

[node name="JugarButton" type="Button" parent="."]
offset_left = 756.0
offset_top = 879.0
offset_right = 1069.0
offset_bottom = 1027.0

[node name="Label" type="Label" parent="JugarButton"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -157.5
offset_top = -153.0
offset_right = 157.5
grow_horizontal = 2
grow_vertical = 0
text = "INICIAR"
label_settings = SubResource("LabelSettings_b6sy1")
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="JugarButton" to="." method="_on_jugar_button_pressed"]
